--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -1,10 +1,67 @@
 /** Import Bootstrap functions */
 @import "~bootstrap/scss/functions";
 
+// Color System
+$blue:      #007bff;
+$indigo:    #6610f2;
+$purple:    #6f42c1;
+$pink:      #e83e8c;
+$red:       #dc3545;
+$orange:    #fd7e14;
+$yellow:    #ffc107;
+$green:     #28a745;
+$teal:      #20c997;
+$cyan:      #17a2b8;
+$black:     #000;
+$white:     #fff;
+$primary:     $red;
+$secondary:   $pink;
+$success:     $green;
+$info:        $cyan;
+$warning:     $yellow;
+$danger:      $red;
+
 $theme-colors: (
-  primary: #d20462
+  "primary":    $primary,
+  "secondary":  $secondary,
+  "success":    $success,
+  "info":       $info,
+  "warning":    $warning,
+  "danger":     $danger
 );
 
 /** Bootstrap navbar fix (https://git.io/fADqW) */
 $navbar-dark-toggler-icon-bg: none;
 $navbar-light-toggler-icon-bg: none;
+
+// Body
+$body-bg:                   $white;
+$body-color:                $black;
+
+// Typography
+$font-weight-lighter:         lighter !default;
+$font-weight-light:           300 !default;
+$font-weight-normal:          400 !default;
+$font-weight-bold:            700 !default;
+$font-weight-bolder:          bolder !default;
+
+// Grid breakpoints
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1210px,
+  xxl: 1480px,
+  xxxl: 1710px
+);
+
+// Grid containers
+$container-max-widths: (
+  sm: 100%,
+  md: 100%,
+  lg: 100%,
+  xl: 1180px,
+  xxl: 1450px,
+  xxxl: 1680px
+);
