--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -2,32 +2,32 @@
 @import "~bootstrap/scss/functions";
 
 // Color System
-$blue:      #007bff;
-$indigo:    #6610f2;
-$purple:    #6f42c1;
-$pink:      #e83e8c;
-$red:       #dc3545;
-$orange:    #fd7e14;
-$yellow:    #ffc107;
-$green:     #28a745;
-$teal:      #20c997;
-$cyan:      #17a2b8;
-$black:     #000;
-$white:     #fff;
-$primary:     $red;
-$secondary:   $pink;
-$success:     $green;
-$info:        $cyan;
-$warning:     $yellow;
-$danger:      $red;
+$blue: #007bff;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #dab4b4;
+$orange: #fd7e14;
+$yellow: #ece4d0;
+$green: #b7cad0;
+$teal: #20c997;
+$cyan: #17a2b8;
+$black: #000;
+$white: #fff;
+$primary: $green;
+$secondary: #b2b2b2;
+$success: $green;
+$info: $cyan;
+$warning: $yellow;
+$danger: $red;
 
 $theme-colors: (
-  "primary":    $primary,
-  "secondary":  $secondary,
-  "success":    $success,
-  "info":       $info,
-  "warning":    $warning,
-  "danger":     $danger
+  "primary": $primary,
+  "secondary": $secondary,
+  "success": $success,
+  "info": $info,
+  "warning": $warning,
+  "danger": $danger
 );
 
 /** Bootstrap navbar fix (https://git.io/fADqW) */
@@ -35,15 +35,15 @@ $navbar-dark-toggler-icon-bg: none;
 $navbar-light-toggler-icon-bg: none;
 
 // Body
-$body-bg:                   $white;
-$body-color:                $black;
+$body-bg: $white;
+$body-color: $black;
 
 // Typography
-$font-weight-lighter:         lighter !default;
-$font-weight-light:           300 !default;
-$font-weight-normal:          400 !default;
-$font-weight-bold:            700 !default;
-$font-weight-bolder:          bolder !default;
+$font-weight-lighter: lighter !default;
+$font-weight-light: 300 !default;
+$font-weight-normal: 400 !default;
+$font-weight-bold: 700 !default;
+$font-weight-bolder: bolder !default;
 
 // Grid breakpoints
 $grid-breakpoints: (
