--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -1,5 +1,6 @@
 
 /** Import theme styles */
+@import "common/typography";
 @import "common/global";
 @import "components/buttons";
 @import "components/comments";
