--- a/resources/assets/styles/autoload/_bootstrap.scss
+++ b/resources/assets/styles/autoload/_bootstrap.scss
@@ -29,8 +29,8 @@
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/button-group";
 //@import "~bootstrap/scss/code";
-//@import "~bootstrap/scss/button-group";
 //@import "~bootstrap/scss/pagination";
 //@import "~bootstrap/scss/badge";
 //@import "~bootstrap/scss/jumbotron";
