--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -3,6 +3,7 @@
 @import "common/typography";
 @import "common/global";
 @import "components/buttons";
+@import "components/button-group";
 @import "components/comments";
 @import "components/forms";
 @import "components/wp-classes";
