--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -48,7 +48,6 @@ $body-color:                 #031532;
 $font-family-roboto:          "Roboto", sans-serif;
 $font-family-cbyg:            "Covered By Your Grace", cursive;
 $font-family-source-serif :   "Source Serif Pro", serif;
-$font-family-special-elite:   "Special Elite", cursive;
 
 // Font Base
 $font-size-base:              1rem; // Assumes the browser default, typically `16px`
@@ -115,3 +114,18 @@ $container-max-widths: (
   xxl: 1450px,
   xxxl: 1680px
 );
+
+// Buttons
+//
+// For each of Bootstrap's buttons, define text, background, and border color.
+$input-btn-padding-y-lg:      0.9375rem;
+$input-btn-padding-x-lg:      1rem;
+
+// Allows for customizing button radius independently from global border radius
+$border-radius-lg:        9.375rem;
+
+$input-btn-font-size-sm:      0.75rem;
+$input-btn-padding-y-sm:      0.3125rem;
+$input-btn-padding-x-sm:      0.5rem;
+
+$btn-font-weight: 500;
