--- a/resources/assets/styles/skhoop/components/_buttons.scss
+++ b/resources/assets/styles/skhoop/components/_buttons.scss
@@ -1,3 +1,56 @@
+// stylelint-disable selector-no-qualifying-type
+
+//
+// Base styles
+//
+
 .btn {
-  border-radius: 0;
+  color: #031532;
+  font-size: 0.8125rem;
+  letter-spacing: 1.86px;
+  min-width: 270px;
+
+  &.btn-lg {
+    border-radius: $btn-border-radius-lg;
+  }
+
+  &.btn-sm {
+    letter-spacing: 0.5px;
+    font-weight: normal;
+
+    @include media-breakpoint-up(lg) {
+      min-width: 145px;
+    }
+  }
+}
+
+//
+// Alternate buttons
+//
+
+@each $color, $value in $theme-colors {
+  .btn-#{$color} {
+    @if ($color == "primary") {
+      color: #fff;
+
+      &:hover {
+        color: #031532;
+        background-color: #fff;
+        border-color: #7e7e7e;
+      }
+    }
+  }
+}
+
+@each $color, $value in $theme-colors {
+  .btn-outline-#{$color} {
+    @if ($color == "primary") {
+      border-color: #7e7e7e;
+      color: #031532;
+
+      &:hover {
+        color: #fff;
+      }
+    }
+  }
 }
