--- a/resources/assets/styles/skhoop/components/_buttons.scss
+++ b/resources/assets/styles/skhoop/components/_buttons.scss
@@ -5,7 +5,7 @@
 //
 
 .btn {
-  color: #031532;
+  color: $body-color;
   font-size: 0.8125rem;
   letter-spacing: 1.86px;
   min-width: 270px;
@@ -15,8 +15,9 @@
   }
 
   &.btn-sm {
-    letter-spacing: 0.5px;
+    font-size: $input-btn-font-size-sm;
     font-weight: normal;
+    letter-spacing: 0.5px;
 
     @include media-breakpoint-up(lg) {
       min-width: 145px;
@@ -31,11 +32,11 @@
 @each $color, $value in $theme-colors {
   .btn-#{$color} {
     @if ($color == "primary") {
-      color: #fff;
+      color: $white;
 
       &:hover {
-        color: #031532;
-        background-color: #fff;
+        color: $body-color;
+        background-color: $white;
         border-color: #7e7e7e;
       }
     }
@@ -46,10 +47,10 @@
   .btn-outline-#{$color} {
     @if ($color == "primary") {
       border-color: #7e7e7e;
-      color: #031532;
+      color: $body-color;
 
       &:hover {
-        color: #fff;
+        color: $white;
       }
     }
   }
