--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -4,6 +4,7 @@
 @import "common/global";
 @import "components/buttons";
 @import "components/button-group";
+@import "components/breadcrumb";
 @import "components/comments";
 @import "components/forms";
 @import "components/wp-classes";
