--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -129,3 +129,7 @@ $input-btn-padding-y-sm:      0.3125rem;
 $input-btn-padding-x-sm:      0.5rem;
 
 $btn-font-weight: 500;
+
+// Breadcrumbs
+$breadcrumb-bg:                $white;
+$breadcrumb-active-color:      $body-color;
