--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -122,13 +122,21 @@ $input-btn-padding-y-lg:      0.9375rem;
 $input-btn-padding-x-lg:      1rem;
 
 // Allows for customizing button radius independently from global border radius
-$border-radius-lg:        9.375rem;
+$border-radius-lg:            9.375rem;
 
 $input-btn-font-size-sm:      0.75rem;
 $input-btn-padding-y-sm:      0.3125rem;
 $input-btn-padding-x-sm:      0.5rem;
 
-$btn-font-weight: 500;
+$btn-font-weight:             500;
+
+// Forms & Form Controls
+$input-height-lg:              3.125rem;
+$input-padding-x-lg:           2.0625rem;
+$input-placeholder-color:      $body-color;
+$input-border-color:         #7e7e7e;
+$input-font-size-lg:           0.8125rem;
+$input-font-weight:            500;
 
 // Breadcrumbs
 $breadcrumb-bg:                $white;
