--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -135,6 +135,7 @@ $input-placeholder-color:      $body-color;
 $input-border-color:         #7e7e7e;
 $input-font-size-lg:           0.8125rem;
 $input-font-weight:            500;
+$form-feedback-invalid-color:#d45656;
 
 // Breadcrumbs
 $breadcrumb-bg:                $white;
