--- a/resources/assets/styles/skhoop/components/_forms.scss
+++ b/resources/assets/styles/skhoop/components/_forms.scss
@@ -26,3 +26,10 @@
     width: auto;
   }
 }
+
+.invalid-feedback {
+  font-size: 0.75rem;
+  font-style: italic;
+  letter-spacing: 1px;
+  line-height: 20px;
+}
