--- a/resources/assets/styles/skhoop/components/_forms.scss
+++ b/resources/assets/styles/skhoop/components/_forms.scss
@@ -7,7 +7,59 @@
   }
 }
 
-.invalid-feedback {
+.custom-control {  // <--- Customize margins if needed
+  margin-top: 0.625rem;
+  margin-bottom: 0.625rem;
+}
+
+// Radios
+//
+// Tweak just a few things for radios.
+.custom-radio {
+  .custom-control-label::after {
+    background: no-repeat 50% / 20px;
+  }
+}
+
+// switches
+//
+// Tweak a few things for switches
+.custom-switch {
+  .custom-control-label::after {
+    background-color: $white;
+    height: 1.25rem;
+    width: 1.25rem;
+    border-radius: 1.4375rem;
+    left: calc(-3.78125rem + 5px);
+    top: calc(-0.1875rem + 5px);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+
+  .custom-control-label::before {
+    height: 0.9375rem;
+    top: 0.25rem;
+    width: 2.375rem;
+    left: -3.375rem;
+    border-color: $white;
+    background-color: $white;
+  }
+
+  .custom-control-input:checked {
+    & ~ .custom-control-label::after {
+      background-color: #292929;
+      left: calc(-3.78125rem + 2px);
+    }
+
+    & ~ .custom-control-label::before {
+      color: #fff;
+      border-color: $primary;
+      background-color: $primary;
+    }
+  }
+}
+
+.invalid-feedback,
+.valid-feedback {
   font-size: 0.75rem;
   font-style: italic;
   letter-spacing: 1px;
