Added color to variable

--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -10,6 +10,7 @@ $red:                         #dab4b4;
 $orange:                      #fd7e14;
 $yellow:                      #ece4d0;
 $green:                       #b7cad0;
+$lightGreen:                  #dbe4e7;
 $teal:                        #20c997;
 $cyan:                        #17a2b8;
 $black:                       #000;
