--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -5,6 +5,7 @@
 @import "components/buttons";
 @import "components/button-group";
 @import "components/breadcrumb";
+@import "components/dropdown";
 @import "components/comments";
 @import "components/forms";
 @import "components/section";
