--- a/resources/assets/styles/skhoop/components/_dropdown.scss
+++ b/resources/assets/styles/skhoop/components/_dropdown.scss
@@ -1,5 +1,7 @@
 .dropdown {
-  min-width: 300px;
+  @include media-breakpoint-up(md) {
+    min-width: 300px;
+  }
 }
 
 .dropdown-toggle {
@@ -27,6 +29,12 @@
 
 .dropdown-item {
   padding: 0.6875rem 1.5rem;
+  border-bottom: 1px solid #7e7e7e;
+  font-size: 0.875rem;
+
+  &:hover {
+    background-color: rgba(183, 202, 208, 0.5);
+  }
 }
 
 .show > .dropdown-menu {
@@ -35,4 +43,13 @@
   width: 85%;
   margin: auto;
   padding: 0;
+  border-color: #7e7e7e;
+  border-top: 0;
+  border-bottom: 0;
+}
+
+.show > .btn-outline-primary.dropdown-toggle {
+  color: #212529;
+  background-color: $white;
+  border-color: #7e7e7e;
 }
