--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -43,6 +43,9 @@ $navbar-light-toggler-icon-bg: none;
 $body-bg:                      $white;
 $body-color:                 #031532;
 
+// Footer
+$footer-link-color:          #292929;
+
 //
 // Typography
 //
@@ -101,7 +104,7 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1210px,
+  xl: 1240px,
   xxl: 1480px
 );
 
@@ -110,7 +113,7 @@ $container-max-widths: (
   sm: 100%,
   md: 100%,
   lg: 100%,
-  xl: 1180px,
+  xl: 1210px,
   xxl: 1450px
 );
 
