--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -6,6 +6,7 @@
 @import "components/button-group";
 @import "components/breadcrumb";
 @import "components/dropdown";
+@import "components/alert";
 @import "components/comments";
 @import "components/forms";
 @import "components/section";
