--- a/resources/assets/styles/common/_mixins.scss
+++ b/resources/assets/styles/common/_mixins.scss
@@ -1,14 +1,54 @@
 // Mixins
-@mixin aspect-ratio-viewport($width, $height, $min) {
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    display: block;
+    content: " ";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+
+  > img,
+  > video,
+  > figure,
+  > .ratio-content {
+    position: absolute;
+    top: 0;
+    left: -9999px;
+    right: -9999px;
+    bottom: 0;
+    min-height: 100%;
+    min-width: 100%;
+    height: 100%;
+    width: 100%;
+    margin: auto; //center left, right
+    object-fit: cover; //act like background-size: cover if supported
+  }
+
+  > .ratio-iframe,
+  > iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+@mixin aspect-ratio-fullwidth($width, $height, $heightType) {
   position: relative;
   overflow: hidden;
   width: 100%;
 
-  @if $min=="min-height" {
+  @if $heightType=="min-height" {
     min-height: calc(100vw * ( #{$width} / #{$height} ));
   }
 
-  @else {
+  @else if $heightType=="height" {
     height: calc(100vw * ( #{$width} / #{$height} ));
   }
 
