--- a/resources/assets/styles/skhoop/components/_dropdown.scss
+++ b/resources/assets/styles/skhoop/components/_dropdown.scss
@@ -10,7 +10,7 @@
   position: relative;
 
   &::after {
-    content: url(../images/icon/arrow.svg);
+    content: url(../images/icon/arrow-down.svg);
     border: none;
     position: absolute;
     top: 0;
