--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -23,6 +23,10 @@ $info:                         $cyan;
 $warning:                      $yellow;
 $danger:                       $red;
 
+// Product Colors
+$saleColor:                   #d45656;
+$oosColor:                      $green;
+
 $theme-colors: (
   "primary":                   $primary,
   "secondary":                 $secondary,
