--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -1,4 +1,3 @@
-
 /** Import theme styles */
 @import "common/typography";
 @import "common/global";
@@ -11,6 +10,7 @@
 @import "components/forms";
 @import "components/section";
 @import "components/wp-classes";
+@import "sections/newsletter";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
