--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -6,7 +6,8 @@ $blue:                        #007bff;
 $indigo:                      #6610f2;
 $purple:                      #6f42c1;
 $pink:                        #e83e8c;
-$red:                         #dab4b4;
+$red:                         #d45656;
+$lightRed:                    #dab4b4;
 $orange:                      #fd7e14;
 $yellow:                      #ece4d0;
 $green:                       #b7cad0;
@@ -15,17 +16,21 @@ $teal:                        #20c997;
 $cyan:                        #17a2b8;
 $black:                       #000;
 $white:                       #fff;
-$ash:                        #f1f1f1;
+$ash:                         #f1f1f1;
 $primary:                      $green;
 $secondary:                   #b2b2b2;
 $success:                      $green;
 $info:                         $cyan;
 $warning:                      $yellow;
-$danger:                       $red;
+$danger:                       $lightRed;
 
 // Product Colors
-$saleColor:                   #d45656;
+$saleColor:                     $red;
 $oosColor:                      $green;
+
+// Form Colors
+$validColor:                    $success;
+$invalidColor:                  $red;
 
 $theme-colors: (
   "primary":                   $primary,
@@ -124,7 +129,7 @@ $container-max-widths: (
 );
 
 // Alert
-$alert-bg-level:             0;
+$alert-bg-level:              0;
 
 // Buttons
 //
@@ -133,7 +138,7 @@ $input-btn-padding-y-lg:      0.9375rem;
 $input-btn-padding-x-lg:      1rem;
 
 // Allows for customizing button radius independently from global border radius
-$border-radius:                1.1875rem;
+$border-radius:               1.1875rem;
 $border-radius-lg:            9.375rem;
 $border-radius-sm:            0.9375rem;
 
@@ -144,31 +149,31 @@ $input-btn-padding-x-sm:      0.5rem;
 $btn-font-weight:             500;
 
 // Forms & Form Controls
-$input-height-lg:              3.125rem;
+$input-height-lg:             3.125rem;
 
-$input-padding-x:              2.0625rem;
-$input-padding-x-sm:           2.0625rem;
-$input-padding-x-lg:           2.0625rem;
+$input-padding-x:             2.0625rem;
+$input-padding-x-sm:          2.0625rem;
+$input-padding-x-lg:          2.0625rem;
 
-$input-placeholder-color:      $body-color;
-$input-border-color:         #7e7e7e;
-$input-font-size-lg:           0.8125rem;
-$input-font-weight:            500;
+$input-placeholder-color:     $body-color;
+$input-border-color:        #7e7e7e;
+$input-font-size-lg:          0.8125rem;
+$input-font-weight:           500;
 
-$form-feedback-invalid-color:#d45656;  // <-- deliberately hex value to override fade tone.
-$form-feedback-valid-color:    $success;
+$form-feedback-invalid-color: $invalidColor;  // <-- deliberately hex value to override fade tone.
+$form-feedback-valid-color:   $validColor;
 
 // Custom Form Control
-$custom-control-indicator-size: 1.25rem;
-$custom-checkbox-indicator-border-radius: 0;
-$custom-control-indicator-checked-disabled-bg: $white; // <--- Custom radio
-$custom-radio-indicator-icon-checked:           str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4' fill='#7E7E7E'/%3e%3c/svg%3e"), "#", "%23") !default;
-$custom-checkbox-indicator-icon-checked:        str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='#7e7e7e' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"), "#", "%23") !default;
-$custom-control-indicator-checked-bg: $white;
-$custom-checkbox-indicator-indeterminate-border-color: #7e7e7e;
-$custom-control-indicator-border-color:     #7e7e7e;
-$custom-control-indicator-checked-border-color: #7e7e7e;
+$custom-control-indicator-size:                           1.25rem;
+$custom-checkbox-indicator-border-radius:                 0;
+$custom-control-indicator-checked-disabled-bg:            $white; // <--- Custom radio
+$custom-radio-indicator-icon-checked:                     str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4' fill='#7E7E7E'/%3e%3c/svg%3e"), "#", "%23") !default;
+$custom-checkbox-indicator-icon-checked:                  str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='#7e7e7e' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"), "#", "%23") !default;
+$custom-control-indicator-checked-bg:                     $white;
+$custom-checkbox-indicator-indeterminate-border-color:  #7e7e7e;
+$custom-control-indicator-border-color:                 #7e7e7e;
+$custom-control-indicator-checked-border-color:         #7e7e7e;
 
 // Breadcrumbs
-$breadcrumb-bg:                $white;
-$breadcrumb-active-color:      $body-color;
+$breadcrumb-bg:               $white;
+$breadcrumb-active-color:     $body-color;
