--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -12,6 +12,7 @@ $orange:                      #fd7e14;
 $yellow:                      #ece4d0;
 $green:                       #b7cad0;
 $lightGreen:                  #dbe4e7;
+$darkGreen:                   #28a745;
 $teal:                        #20c997;
 $cyan:                        #17a2b8;
 $black:                       #000;
@@ -29,7 +30,7 @@ $saleColor:                     $red;
 $oosColor:                      $green;
 
 // Form Colors
-$validColor:                    $success;
+$validColor:                    $darkGreen;
 $invalidColor:                  $red;
 
 $theme-colors: (
@@ -162,13 +163,15 @@ $input-font-weight:           500;
 
 $form-feedback-invalid-color: $invalidColor;  // <-- deliberately hex value to override fade tone.
 $form-feedback-valid-color:   $validColor;
+$form-feedback-icon-invalid:  url(../images/icon/invalid-feedback.svg);
+$form-feedback-icon-valid:  url(../images/icon/valid-feedback.svg);
 
 // Custom Form Control
 $custom-control-indicator-size:                           1.25rem;
 $custom-checkbox-indicator-border-radius:                 0;
 $custom-control-indicator-checked-disabled-bg:            $white; // <--- Custom radio
 $custom-radio-indicator-icon-checked:                     str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='4' fill='#7E7E7E'/%3e%3c/svg%3e"), "#", "%23") !default;
-$custom-checkbox-indicator-icon-checked:                  str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='#7e7e7e' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"), "#", "%23") !default;
+$custom-checkbox-indicator-icon-checked:                  url(../images/icon/check.svg);
 $custom-control-indicator-checked-bg:                     $white;
 $custom-checkbox-indicator-indeterminate-border-color:  #7e7e7e;
 $custom-control-indicator-border-color:                 #7e7e7e;
