--- a/resources/assets/styles/skhoop/components/_forms.scss
+++ b/resources/assets/styles/skhoop/components/_forms.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.form-control-lg {
+  &.is-invalid,
+  &.is-valid {
+    background-size: 1.875rem;
+  }
+}
+
 .custom-control {
   .custom-control-label > span {
     display: inline-block;
