--- a/resources/assets/styles/skhoop/sections/_product-listing.scss
+++ b/resources/assets/styles/skhoop/sections/_product-listing.scss
@@ -8,18 +8,20 @@
   }
 }
 
+// Product Listing Section
 .product-listing {
   position: relative;
   overflow: hidden;
   padding-top: 2.5rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-  background-image: linear-gradient(to top, $body-bg, $body-bg 250px, $lightGreen 250px, $lightGreen 100%);
+  background-image: linear-gradient(to top, $body-bg, $body-bg 9.375rem, $lightGreen 9.375rem, $lightGreen 100%);
 
   @include media-breakpoint-up(lg) {
     padding-top: 3.125rem;
     padding-left: 3.125rem;
     padding-right: 3.125rem;
+    background-image: linear-gradient(to top, $body-bg, $body-bg 15.625rem, $lightGreen 15.625rem, $lightGreen 100%);
   }
 
   .container {
@@ -36,14 +38,34 @@
     @include aspect-ratio(1,1);
     @include center(horizontal);
 
-    width: 100%;
+    top: 5.625rem;
+    width: calc(100% + 1.5rem);
     max-width: 1200px;
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
+
+    @include media-breakpoint-up(lg) {
+      top: 3.125rem;
+      width: calc(100% - 15rem);
+    }
   }
 }
 
+// Product Header Section
+.product-header {
+  &-actionbox {
+    padding-top: 0.9375rem;
+    padding-bottom: 0.9375rem;
+
+    @include media-breakpoint-up(lg) {
+      padding-top: 1.25rem;
+      padding-bottom: 1.25rem;
+    }
+  }
+}
+
+// Product
 .products {
   margin-left: -0.7813rem;
   margin-right: -0.7813rem;
@@ -99,7 +121,7 @@
 
     &-status {
       position: absolute;
-      top: 1.25rem;
+      top: 0.9375rem;
       right: 0;
       z-index: 1;
       min-width: 75px;
@@ -111,6 +133,7 @@
       border-bottom-left-radius: 0.1875rem;
 
       @include media-breakpoint-up(lg) {
+        top: 1.375rem;
         padding: 0.375rem 1.125rem;
         font-size: 0.8125rem;
         line-height: 0.9375rem;
@@ -125,6 +148,26 @@
 
     &-name {
       margin-bottom: 0;
+      font-size: 0.75rem;
+      letter-spacing: 0.5px;
+      text-transform: none;
+
+      @include media-breakpoint-up(lg) {
+        font-size: 0.8125rem;
+        letter-spacing: 1.5px;
+      }
+    }
+
+    &-price {
+      margin-top: -0.4375rem;
+      font-size: 0.75rem;
+      letter-spacing: 0.5px;
+
+      @include media-breakpoint-up(lg) {
+        margin-top: -0.1875rem;
+        font-size: 0.8125rem;
+        letter-spacing: 1.86px;
+      }
     }
 
     // Size Modifiers
@@ -140,7 +183,7 @@
       }
 
       .product-details {
-        padding: 0 0.9375rem 0;
+        padding: 0 0.9375rem 0.3125rem;
 
         @include media-breakpoint-up(lg) {
           padding: 0 2.5rem 1.5625rem;
@@ -160,7 +203,7 @@
       }
 
       .product-details {
-        padding: 0 0.9375rem 0;
+        padding: 0 0.9375rem 0.3125rem;
 
         @include media-breakpoint-up(lg) {
           padding: 0 2.3438rem 1.5625rem;
@@ -176,8 +219,16 @@
       }
 
       .product-price {
+        color: $red;
+
         span {
+          margin-right: 0.3125rem;
+          color: $body-color;
           text-decoration: line-through;
+
+          @include media-breakpoint-up(lg) {
+            margin-right: 1.25rem;
+          }
         }
       }
     }
