--- a/resources/assets/styles/skhoop/sections/_newsletter.scss
+++ b/resources/assets/styles/skhoop/sections/_newsletter.scss
@@ -1,12 +1,60 @@
 .newsletter {
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #ece4d0;
+  min-height: 300px;
+
   &-cover {
-    height: 300px;
-    width: 600px;
-    background: red;
+    background: #9a9a9a;
+    height: 221px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    padding: 0;
+
+    &::before {
+      content: " ";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      left: 0;
+      right: 0;
+      bottom: -2px;
+      top: auto;
+      background: url(../images/graphics/newsletter-curve-h.svg) no-repeat bottom/100% transparent;
+
+      @include media-breakpoint-up(md) {
+        left: auto;
+        right: 0;
+        bottom: 0;
+        background: url(../images/graphics/newsletter-curve-v.svg) no-repeat right/contain transparent;
+      }
+    }
+
+    @include media-breakpoint-up(md) {
+      background-size: cover;
+      height: inherit;
+    }
   }
 
   &-content {
-    background-color: #ece4d0;
+    padding-bottom: 72px;
+    padding-top: 20px;
+
+    @include media-breakpoint-up(md) {
+      padding-bottom: 0;
+      padding-top: 0;
+    }
+  }
+
+  &-inner {
+    max-width: 395px;
+    text-align: center;
+
+    @include media-breakpoint-up(md) {
+      text-align: left;
+    }
   }
 
   &-title {
@@ -23,5 +71,38 @@
     font-style: italic;
     letter-spacing: 1px;
     line-height: 20px;
+    padding: 0.625rem 0;
+    margin-bottom: 1.25rem;
+
+    @include media-breakpoint-up(md) {
+      margin-bottom: 0;
+    }
+  }
+
+  &-form {
+    .form-group {
+      width: 75%;
+
+      @include media-breakpoint-up(md) {
+        width: 327px;
+      }
+    }
+
+    .form-group [type="text"] {
+      min-width: 100%;
+    }
+
+    .btn {
+      margin-left: 1.1875rem;
+    }
+  }
+
+  .custom-checkbox {
+    text-align: left;
+    padding-left: 3.75rem;
+
+    @include media-breakpoint-up(md) {
+      padding-left: 1.875rem;
+    }
   }
 }
