--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -19,3 +19,4 @@
 @import "layouts/tinymce";
 @import "sections/category-banner";
 @import "sections/product-listing";
+@import "sections/product-filter";
