--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -135,17 +135,20 @@ $alert-bg-level:              0;
 // Buttons
 //
 // For each of Bootstrap's buttons, define text, background, and border color.
+$input-btn-padding-y:         0.5938rem;
+$input-btn-padding-x:         0.5938rem;
+
+$input-btn-font-size-sm:      0.75rem;
+$input-btn-padding-y-sm:      0.3125rem;
+$input-btn-padding-x-sm:      0.5rem;
+
 $input-btn-padding-y-lg:      0.9375rem;
 $input-btn-padding-x-lg:      1rem;
 
 // Allows for customizing button radius independently from global border radius
 $border-radius:               1.1875rem;
-$border-radius-lg:            9.375rem;
 $border-radius-sm:            0.9375rem;
-
-$input-btn-font-size-sm:      0.75rem;
-$input-btn-padding-y-sm:      0.3125rem;
-$input-btn-padding-x-sm:      0.5rem;
+$border-radius-lg:            9.375rem;
 
 $btn-font-weight:             500;
 
