--- a/resources/assets/styles/skhoop/components/_buttons.scss
+++ b/resources/assets/styles/skhoop/components/_buttons.scss
@@ -61,6 +61,7 @@
   padding: 0;
   height: 2.0625rem;
   width: 2.0625rem;
+  box-shadow: 0 0 0.3125rem 0 rgba($black, 0.1);
 
   &-sm {
     height: 1.875rem;
