--- a/resources/assets/styles/skhoop/sections/_category-banner.scss
+++ b/resources/assets/styles/skhoop/sections/_category-banner.scss
@@ -21,6 +21,16 @@
     @include media-breakpoint-up(sm) {
       padding: 2.8125rem 1.875rem;
     }
+
+    & > .container {
+      @include media-breakpoint-up(xl) {
+        max-width: 1210px;
+      }
+
+      @include media-breakpoint-up(xxl) {
+        max-width: 1210px;
+      }
+    }
   }
 
   &-info {
