--- a/resources/assets/styles/skhoop/sections/_product-listing.scss
+++ b/resources/assets/styles/skhoop/sections/_product-listing.scss
@@ -40,7 +40,7 @@
 
     top: 5.625rem;
     width: calc(100% + 1.5rem);
-    max-width: 1200px;
+    max-width: 75rem;
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
@@ -62,6 +62,62 @@
       padding-top: 1.25rem;
       padding-bottom: 1.25rem;
     }
+  }
+
+  &-title {
+    margin-bottom: 0;
+
+    @include media-breakpoint-up(lg) {
+      margin-bottom: -1.25rem;
+    }
+  }
+
+  & > .container {
+    @include media-breakpoint-up(lg) {
+      max-width: calc(100% - 60px);
+    }
+
+    @include media-breakpoint-up(xl) {
+      max-width: 1210px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+      max-width: 1210px;
+    }
+  }
+
+  .product-breadcrumbs {
+    .breadcrumb {
+      @include media-breakpoint-up(lg) {
+        margin-left: 0.4375rem;
+      }
+    }
+  }
+
+  .product-filter-toggle {
+    .js-filter-toggle {
+      font-size: 0.8125rem;
+      font-weight: 500;
+      letter-spacing: 1.86px;
+      line-height: 1.5625rem;
+      cursor: pointer;
+
+      @include media-breakpoint-up(lg) {
+        margin-right: 1.125rem;
+      }
+
+      button {
+        margin-left: 0.75rem;
+      }
+    }
+  }
+
+  .js-filter {
+    @include center(horizontal);
+
+    z-index: 2;
+    width: 100%;
+    background-color: $body-bg;
   }
 }
 
