--- a/resources/assets/styles/skhoop/sections/_newsletter.scss
+++ b/resources/assets/styles/skhoop/sections/_newsletter.scss
@@ -82,27 +82,32 @@
   }
 
   &-form {
-    .form-group {
-      width: 75%;
+    .btn {
+      background-color: $white;
+    }
+
+    .input-group {
+      margin-bottom: 0;
+    }
+
+    .input-group [type="text"] {
+      min-width: auto;
+      margin-right: 0.625rem;
+      border-radius: 9.375rem;
 
       @include media-breakpoint-up(md) {
-        width: 80%;
+        margin-right: 1.875rem;
       }
     }
 
-    .form-group [type="text"] {
-      min-width: 100%;
-    }
-
-    .btn {
-      background-color: $white;
-      margin-left: 0.375rem;
+    .input-group.is-invalid + .invalid-feedback {
+      display: block;
     }
   }
 
   .custom-checkbox {
     text-align: left;
-    padding-left: 3.75rem;
+    padding-left: 3.125rem;
 
     @include media-breakpoint-up(md) {
       padding-left: 1.875rem;
