--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -183,3 +183,6 @@ $custom-control-indicator-checked-border-color:         #7e7e7e;
 // Breadcrumbs
 $breadcrumb-bg:               $white;
 $breadcrumb-active-color:     $body-color;
+
+// Modals
+$modal-content-border-radius: 0.3125rem;
