--- a/resources/assets/styles/skhoop/components/_buttons.scss
+++ b/resources/assets/styles/skhoop/components/_buttons.scss
@@ -8,7 +8,13 @@
   color: $body-color;
   font-size: 0.8125rem;
   letter-spacing: 1.86px;
-  min-width: 270px;
+  max-width: 270px;
+  width: 100%;
+
+  @include media-breakpoint-up(md) {
+    width: auto;
+    min-width: 270px;
+  }
 
   &.btn-lg {
     border-radius: $btn-border-radius-lg;
@@ -19,7 +25,8 @@
     font-weight: normal;
     letter-spacing: 0.5px;
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(md) {
+      width: auto;
       min-width: 145px;
     }
   }
