--- a/resources/assets/styles/skhoop/components/_forms.scss
+++ b/resources/assets/styles/skhoop/components/_forms.scss
@@ -86,7 +86,7 @@
   }
 
   & ~ .custom-control-label::before {
-    color: #fff;
+    color: $white;
     border-color: $primary;
     background-color: $primary;
   }
@@ -100,4 +100,3 @@
   letter-spacing: 1px;
   line-height: 20px;
 }
-
