Newsletter moved to default

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -25,4 +25,5 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
+@import "sections/newsletter";
 @import "skhoop/main";
