--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -41,6 +41,7 @@ $theme-colors: (
   "warning":                   $warning,
   "danger":                    $danger,
   "ash":                       $ash,
+  "lightgreen":                $lightGreen,
 );
 
 // Responsive font size breakpoint
