Product Filter CSS Update.

--- a/resources/assets/styles/skhoop/components/_buttons.scss
+++ b/resources/assets/styles/skhoop/components/_buttons.scss
@@ -68,6 +68,7 @@
   padding: 0;
   height: 2.0625rem;
   width: 2.0625rem;
+  overflow: hidden;
   box-shadow: 0 0 0.3125rem 0 rgba($black, 0.1);
 
   &-sm {
