--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -11,6 +11,7 @@
 @import "components/section";
 @import "components/wp-classes";
 @import "sections/newsletter";
+@import "sections/fifty-fifthy-section";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
